fix testimonial spacing

--- a/src/components/testimonial.module.css
+++ b/src/components/testimonial.module.css
@@ -13,14 +13,15 @@
   background-color: black;
   border-radius: 50%;
 }
-.name {
-  margin-bottom: 0;
-}
 
-.years {
-  margin-bottom: 1rem;
-}
+.name { margin-bottom: 0; }
+.years { margin-bottom: 1rem; }
+.testimonial { margin-bottom: 0; }
 
-.testimonial {
-  margin-bottom: 0;
+@media (max-width: 700px) {
+  .testimonial { margin-bottom: 2rem; }
+  
+  .container:last-of-type > p.testimonial {
+    margin-bottom: 0;
+  }
 }
